Add variant diagrams.

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -10,3 +10,10 @@ $badge-warning-color: rgba(230, 126, 30, 1)
 $danger-color:        rgba(204, 29, 7, 1)
 
 $app-background-color: #e8e5e5
+
+$high-impact-color:       #ac1113
+$moderate-impact-color:   #ec9d2c
+$modifier-impact-color:   #f9e4b5
+$low-impact-color:        rgba(181, 207, 107, 0.65)
+
+$unremarkable-color:              #878787
