Legend - impact colors are not showing #1

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,6 +1,6 @@
 $nav-color:           #23477a
 
-$link-color:          #30638e 
+$link-color:          #30638e
 
 $text-color:           rgb(113,113,113)
 $app-color:            #434343
@@ -17,3 +17,7 @@ $modifier-impact-color:   #f9e4b5
 $low-impact-color:        rgba(181, 207, 107, 0.65)
 
 $unremarkable-color:              #878787
+
+$cryptic-site-color:  #e66a7f
+$exon-skipping-color: #db9625
+$canonical-site-color: steelblue
