More work to get launch from Mosaic to work properly. #3

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -10,6 +10,7 @@ $badge-warning-color: rgba(230, 126, 30, 1)
 $danger-color:        rgba(204, 29, 7, 1)
 
 $app-background-color: #e8e5e5
+$app-label-color:      #a7dbff
 
 $high-impact-color:       #ac1113
 $moderate-impact-color:   #ec9d2c
