Centralize color styling

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,6 +1,7 @@
 $nav-color:           #23477a
 
 $link-color:          #30638e
+$app-label-color:     #30638e
 
 $text-color:           rgb(113,113,113)
 $app-color:            #434343
@@ -10,7 +11,8 @@ $badge-warning-color: rgba(230, 126, 30, 1)
 $danger-color:        rgba(204, 29, 7, 1)
 
 $app-background-color: #e8e5e5
-$app-label-color:      #a7dbff
+
+$nav-label-color:      #a7dbff
 
 $high-impact-color:       #ac1113
 $moderate-impact-color:   #ec9d2c
