Show panels as cards. New card for showing IGV. Work around IGV mem leaks by not destroying an re-creating encompassing component. Also, streamlined mem usage by not setting genome, but rather setting reference, which saves about 50 MB of memory.

--- a/src/styles/variables.sass
+++ b/src/styles/variables.sass
@@ -1,7 +1,15 @@
 $nav-color:           #23477a
 
-$link-color:          #30638e
-$app-label-color:     #30638e
+$link-color:           #306387
+$app-label-color:      #30638f
+
+$button-color:            #eceff2
+$button-text-color:       #30638f
+$primary-button-color:    #30638f
+$tonal-button-color:      #f4fbff
+$tonal-button-text-color: #30638f
+$button-group-color:      #dee5ea
+
 
 $text-color:           rgb(113,113,113)
 $app-color:            #434343
